--- a/sources/www/templates/tab-camera.html
+++ b/sources/www/templates/tab-camera.html
@@ -2,13 +2,13 @@
   <ion-content class="padding">
     <h2>Envoyer un schmilblick</h2>
     <p id="send-img"></p>
-    <button ng-click="close()" id="close-img" style="display:none;">Supprimer</button>
-    <button ng-click="launch()" id="button-send-img">Choisir une image</button>
+    <button ng-click="cameraClose()" id="close-img" style="display:none;">Supprimer</button>
+    <button ng-click="cameraLaunch()" id="button-send-img">Choisir une image</button>
     <br/>
     <p>
-      <label for="text">Réponse : </label>
-      <input type="text" name="text" id="text" style="border:1px solid black;"/>
-      <button type="submit">OK</button>
+      <label for="cameratext">Réponse : </label>
+      <input type="text" name="cameratext" id="cameratext" style="border:1px solid black;"/>
+      <button type="submit" ng-click="cameraSend()">OK</button>
     </p>
   </ion-content>
 </ion-view>
