--- a/sources/www/css/style.css
+++ b/sources/www/css/style.css
@@ -1,1 +1,23 @@
-/* Empty. Add your own CSS if you like */
+#astuce-container{
+	background: url(../img/astuce.png) no-repeat center center / cover;
+    height: 100%;
+    width: 100%;
+    float: left;
+    position: absolute;
+    z-index: 200;
+    transition: all .5s ease;
+}
+.hidden{
+	opacity: 0;
+	transition: all .5s ease;
+	pointer-events: none;
+}
+#astuces{
+	color: #ffffff;
+    font-size: 1em;
+    text-align: center;
+    padding: 0 40px;
+    position: absolute;
+    bottom: 10%;
+    width: 100%;
+}
