--- a/sources/www/templates/tabs.html
+++ b/sources/www/templates/tabs.html
@@ -25,4 +25,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-camera"></ion-nav-view>
   </ion-tab>
 
+  <!-- Geolacation Tab -->
+  <ion-tab title="Geolocation" icon-off="ion-location" icon-on="ion-location" href="#/tab/geolocation">
+    <ion-nav-view name="tab-geolocation"></ion-nav-view>
+  </ion-tab>
+
 </ion-tabs>
