send schmilblick to friends

--- a/sources/www/templates/tabs.html
+++ b/sources/www/templates/tabs.html
@@ -20,7 +20,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
-  <!-- Account Tab -->
+  <!-- Camera Tab -->
   <ion-tab title="Camera" icon-off="ion-ios-camera-outline" icon-on="ion-camera" href="#/tab/camera">
     <ion-nav-view name="tab-camera"></ion-nav-view>
   </ion-tab>
