--- a/sources/www/css/style.css
+++ b/sources/www/css/style.css
@@ -1,1 +1,34 @@
 /* Empty. Add your own CSS if you like */
+a.item-content span{
+  content: "";
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  right: 40px;
+  transform: translateY(-50%);
+  top: 50%;
+  background: url(../img/msn.png);
+  background-size: contain;
+  text-align: center;
+  color: white;
+  font-size: 12px;
+}
+.checked .ion-checkmark:before{
+  color:green;
+}
+
+.item.activated{
+  background:#fff;
+}
+
+
+.btnStylay{
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 3px;
+  background: #f7aa10;
+  border: none;
+  color: #fff;
+  padding: 12px;
+  font-weight: bold;
+}
