--- a/sources/www/templates/tab-geolocation.html
+++ b/sources/www/templates/tab-geolocation.html
@@ -1,7 +1,11 @@
 <ion-view view-title="Geolocation">
+  <script src=
+            "https://maps.googleapis.com/maps/api/js?key=Your_API_Key&libraries=places">
+  </script>
   <ion-content class="padding">
     <h2 id="title"></h2>
     <h3 id="region"></h3>
+    <h4 id="places"></h4>
     <p id="description"></p>
 
   </ion-content>
