--- a/sources/www/templates/tab-camera.html
+++ b/sources/www/templates/tab-camera.html
@@ -6,8 +6,8 @@
     <button ng-click="cameraLaunch()" id="button-send-img" class="btnStylay">Choisir une image</button>
     <br/>
     <p>
-      <label for="cameratext">Réponse : </label>
-      <input type="text" name="cameratext" id="cameratext" style="border:1px solid black;"/>
+      <label for="cameratext">Mot à deviner : </label>
+      <input type="text" name="cameratext" id="cameratext"/>
     </p>
 
     <ion-list>
