--- a/sources/www/templates/tab-geolocation.html
+++ b/sources/www/templates/tab-geolocation.html
@@ -7,6 +7,6 @@
     <h3 id="region"></h3>
     <h4 id="places"></h4>
     <p id="description"></p>
-
+  <div id="form-geoloc"></div>
   </ion-content>
 </ion-view>
