--- a/sources/www/templates/tabs.html
+++ b/sources/www/templates/tabs.html
@@ -15,14 +15,14 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
-  <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
-
   <!-- Camera Tab -->
   <ion-tab title="Camera" icon-off="ion-ios-camera-outline" icon-on="ion-camera" href="#/tab/camera">
     <ion-nav-view name="tab-camera"></ion-nav-view>
+  </ion-tab>
+
+  <!-- Account Tab -->
+  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
+    <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
   <!-- Geolacation Tab -->
@@ -31,3 +31,5 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
 </ion-tabs>
+
+<h3 id="username"><img src="img/1.png" id="userimg">Bienvenue, <span id="nameuser">user</span>.</h3>
