--- a/sources/www/css/style.css
+++ b/sources/www/css/style.css
@@ -77,10 +77,29 @@ img.selected{
   border:4px solid green
 }
 
+h2{
+  font-family:"Jaldi"
+}
+
 #username{
+    width: 0%;
+    overflow: hidden;
+    transition: all ease-out 0.7s 0.5s;
+}
+
+#username a{
     z-index: 40;
-    margin-top: 100px;
     position: relative;
+    background: #fff;
+    padding: 20px 0;
+    top: 0;
+    font-family:"Jaldi", sans-serif;
+    width:100vw;
+    display: inline-block;
+    text-decoration: none;
+    color: #202020;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 #username img{
@@ -91,10 +110,71 @@ img.selected{
     vertical-align: -6px;
 }
 
-.platform-ios #username{
-  margin-top:80px;
+.pane{
+    background:url(../img/interior.png);
 }
 
-.scroll{
-  margin-top:50px;
+.pane[state="tab.dash"]{
+    background:url(../img/screen-ios.png);
 }
+
+.tab-nav.tabs{
+  top:auto;
+}
+
+.has-tabs-top{
+    top:0;
+}
+
+.overflow-scroll .scroll, .scroll{
+    height:auto;
+    margin-top:100px;
+    padding: 10px;
+    font-family:"Work Sans";
+    padding-bottom: 50px;
+}
+
+.tab-item .icon {
+    display: block;
+    margin: 0 auto;
+    height: 22px;
+    font-size: 22px;
+    margin-top: 6px;
+}
+
+.tabs-top.tabs-striped .tab-item.tab-item-active > .badge, .tabs-top.tabs-striped .tab-item.tab-item-active > i, .tabs-top.tabs-striped .tab-item.active > .badge, .tabs-top.tabs-striped .tab-item.active > i, .tabs-top.tabs-striped .tab-item.activated > .badge, .tabs-top.tabs-striped .tab-item.activated > i{
+    margin-top:5px;
+}
+
+
+#play{
+  width: 100vw;
+  display: inline-block;
+  position: absolute;
+  left: -10px;
+  top: -15px;
+  height: calc(100vh - 150px);
+  text-align: center;
+  line-height: 400px;
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+}
+
+#icontap{
+  position: absolute;
+  bottom: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 35px;
+  -webkit-animation: fade ease-out 1s infinite;
+       -moz-animation: fade ease-out 1s infinite;
+         -o-animation: fade ease-out 1s infinite;
+            animation: fade ease-out 1s infinitee;
+  opacity:0.5;
+}
+
+@-webkit-keyframes fade { 0%{opacity:0;} 50%{opacity:1;} 100%{opacity:0;} }
+   @-moz-keyframes fade { 0%{opacity:0;} 50%{opacity:1;} 100%{opacity:0;}  }
+     @-o-keyframes fade { 0%{opacity:0;} 50%{opacity:1;} 100%{opacity:0;}  }
+        @keyframes fade { 0%{opacity:0;} 50%{opacity:1;} 100%{opacity:0;}  }
