--- a/sources/www/templates/tabs.html
+++ b/sources/www/templates/tabs.html
@@ -31,4 +31,4 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 </ion-tabs>
 
-<h3 id="username"><img src="img/1.png" id="userimg">Bienvenue, <span id="nameuser">user</span>.</h3>
+<h3 id="username"><a href="#/tab/account"><img src="img/1.png" id="userimg">Bienvenue <span id="nameuser">user</span></a></h3>
