--- a/sources/www/templates/tab-geolocation.html
+++ b/sources/www/templates/tab-geolocation.html
@@ -8,7 +8,9 @@
     <h3 id="newregion"></h3>
     <h4 id="places"></h4>
     <p id="description"></p>
+    <label>Coordonnée latitude : </label>
       <input type="number" id="latitudeGeoloc" value=""/>
+    <label>Coordonnée longitude : </label>
       <input type="number" id="longitudeGeoloc" value=""/>
     <p><button type="submit" onclick="sendValueGeoloc()" class="btnStylay">Envoyer</button></p>
   </ion-content>
