add shcmilblick in firebase

--- a/sources/www/templates/tab-camera.html
+++ b/sources/www/templates/tab-camera.html
@@ -8,6 +8,7 @@
     <p>
       <label for="cameratext">Mot à deviner : </label>
       <input type="text" name="cameratext" id="cameratext"/>
+      <input type="hidden" name="saveImgName" id="saveImgName" value="">
     </p>
 
     <ion-list>
