--- a/www/css/main.css
+++ b/www/css/main.css
@@ -20,19 +20,13 @@
 body {
   font-family: 'Helvetica', sans-serif;
 }
-/*
+
 header {
   width: 100%;
-  height: 80px;
-  background-color: #fff;
-  position: fixed;
-  z-index: 20;
-  top: 0;
-  padding: 25px 30px;
-  box-shadow: var(--shadow);
-}*/
+}
 
 h1 {
+  width: 100%;
   color: #000;
   text-transform: uppercase;
   font-size: 30px;
@@ -56,6 +50,7 @@ h1 {
   height: 200px;
   background-size: 100%;
   background-repeat: no-repeat;
+  margin-top: 10px;
 }
 
 .logo {
